tests/paczka1/small_fuzzy/70630197.err
Error in line 1: 7W14HntpE S615 66,7
Error in line 9: 7W14HntpE S904 75,6
